# cadmus

./: .eslintrc.json  .gitignore  README.md  cadmus_cli.py  middleware.ts  package-lock.json  package.json  pyproject.toml
app/api/export/: route.ts
app/api/projects/: route.ts
app/auth/: page.tsx
app/auth/callback/: route.ts
app/dashboard/: page.tsx
app/projects/new/: page.tsx
app/settings/: page.tsx
lib/: anthropic.ts  supabase.ts
src/cadmus/: __init__.py  cli.py  engine.py  models.py
